objects/TracHier__Child_Object_Display_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>custom setting (list) to store settings for child object display in Hierarchies, including: user or profile id, object, 6 display fields</description>
    <fields>
        <fullName>TracHier__Criteria_Logic__c</fullName>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Display_Field_10__c</fullName>
        <description>A display field for the child object</description>
        <label>Display Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Display_Field_11__c</fullName>
        <description>A display field for the child object</description>
        <label>Display Field 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Display_Field_12__c</fullName>
        <description>A display field for the child object</description>
        <label>Display Field 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Field10_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 10 Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Field10_Label__c</fullName>
        <label>Field 10 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Field11_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 11 Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Field11_Label__c</fullName>
        <label>Field 11 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Field12_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field 12 Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Field12_Label__c</fullName>
        <label>Field 12 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__ObjectToDisplay__c</fullName>
        <description>Name of a child object to display</description>
        <label>Child Object To Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Object_Label__c</fullName>
        <label>Child Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Show_Display_Fields_for_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Display Fields for All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Show_Records_for_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Records for All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__User_or_Profile_Id__c</fullName>
        <description>Can contain a User Id or a profile Id</description>
        <label>User or Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hierarchies Child Object Display Setting</label>
</CustomObject>